<resources>
    <string name="app_name">BudgetApplication</string>
    <string name="note_hint">Note&#8230;</string>
    <string name="money_hint">0.00</string>
    <string name="date_hint">Optional Date...</string>
    <string name="add_expense_B">ADD</string>
    <string name="select_category_spinner">Select Category</string>
    <string name="select_subcategory_spinner">Select Subcategory</string>
    <string name="bc_title_text">Budget Categories</string>
    <string name="month_switch">Month</string>
    <string name="year_switch">Year</string>
    <string name="month_year_switch">Month/Year</string>
    <string name="tab">\u0009</string>
    <string name="subCatTitle">Budget Subcategories</string>
    <string name="expenses">Expenses</string>
    <string name="add_b">Update Budget</string>
</resources>
