<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".ExpenseActivity">

    <com.isaacsmobiledevelopment.lehmanit17.budgetapplication.PrefixEditText
        android:id="@+id/moneyET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:cursorVisible="false"
        android:gravity="center"
        android:hint="@string/money_hint"
        android:textSize="100sp"
        android:textColor="@color/money_textET"
        android:imeOptions="actionDone"
        android:tag="$"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />




    <Spinner
        android:id="@+id/categorySP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/moneyET"
        tools:layout_editor_absoluteX="16dp" />

    <Spinner
        android:id="@+id/subcategorySP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:prompt="@string/select_subcategory_spinner"
        app:layout_constraintTop_toBottomOf="@+id/categorySP"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/layoutdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/subcategorySP"
        tools:layout_editor_absoluteX="25dp">

        <EditText
            android:id="@+id/dateET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/date_hint"
            android:textSize="20sp"
            android:layout_weight="1"
             />
    </LinearLayout>

    <EditText
        android:id="@+id/noteET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/note_hint"
        android:inputType="textCapSentences"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/layoutdate"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/noteET"
        tools:layout_editor_absoluteX="-7dp">

        <Button
            android:id="@+id/addexpenseB"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:background="#00FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="@string/add_expense_B"
            android:textColor="@color/moneyExpense"
            android:textSize="50sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>