<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:orientation="vertical"
    tools:context=".EditBudgetActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/moneyBudget"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>



    <com.isaacsmobiledevelopment.lehmanit17.budgetapplication.PrefixEditText
        android:id="@+id/budgetAmountET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext_green"

        android:ems="10"
        android:gravity="center"
        android:hint="@string/money_hint"
        android:imeOptions="actionDone"
        android:tag="$"
        android:textColor="@color/money_textET"
        android:textSize="100sp"
        app:layout_constraintTop_toBottomOf="@id/llTitle"
        tools:layout_editor_absoluteX="10dp" />

    <LinearLayout
        android:id="@+id/headerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/budgetAmountET"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expenseTV"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            android:textColor="@color/moneyBudget"
            android:textSize="22sp"
            android:textStyle="bold"
            />

        <RadioGroup
            android:id="@+id/timeSwithcRG"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/MonthRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Month" />

            <RadioButton
                android:id="@+id/YearRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Year" />

            <RadioButton
                android:id="@+id/AllRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="All" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLL"
        tools:layout_editor_absoluteX="25dp">

        <View
            android:id="@+id/dividerV"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/listViewUserB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:footerDividersEnabled="false"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:scrollbars="none"
            />

        <Button
            android:id="@+id/updateBudgetB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:background="#00FFFFFF"
            android:text="@string/add_b"
            android:textColor="@color/moneyBudget"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>